# haskell-programming

./: Ch10_DatabaseProcessing.hs  Ch15_Exercises.hs  Ch24_Fractions.hs  Cipher.hs  CompilerFlags.hs  EqInstances.hs  Hutton's Razor.hs  Phone.hs  README.md  ReaderPractice.hs  Recursion.hs  ReplaceExperiment.hs  Vigenère.hs  WordNumber.hs  haskell-programming.cabal
addition/: Addition.hs  addition.cabal
ch13-hangman/: ch13-hangman.cabal
ch14-morse/: ch14-morse.cabal
ch14-testing/: Main.hs  ch14-testing.cabal
ch14-testing/src/Arbitrary/: ADT.hs
ch17-applicative/: ch17-applicative.cabal
ch17-applicative/src/: ApplicativeInstances.hs
ch18-monad/: ch18-monad.cabal
ch18-monad/src/: Sum.hs
ch24-exercises/: IPv4.hs  IPv6.hs  SemVer.hs  ch24-exercises.cabal  package.yaml
hangman/: hangman.cabal
hangman/src/: Main.hs
morse/: morse.cabal
morse/lib/: Morse.hs
morse/tests/: Tests.hs
