name:             addition
version:          0.0.0
build-type:       Simple
cabal-version:    >=1.10

library
  exposed-modules:      Addition
  -- ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
                      , hspec
                      , QuickCheck
  hs-source-dirs:       .
  default-language:     Haskell2010
